initial hood absolute encoder implementation